backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend
  labels:
    project: counter
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
        project: counter
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 50m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 40Mi
