frontend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend
  labels:
    project: counter
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
        project: counter
    spec:
      volumes:
        - name: health
          emptyDir: {}
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter-frontend-go
          ports:
            - containerPort: 3000
          startupProbe:
            periodSeconds: 1
            failureThreshold: 60
            httpGet:
              path: /api/livez
              port: 3000
          livenessProbe:
            failureThreshold: 1
            exec:
              command:
                - cat
                - /tmp/health/healthy
          volumeMounts:
            - name: health
              mountPath: /tmp/health
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 300m
              memory: 300Mi
