redis_sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    project: counter
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        project: counter
    spec:
      containers:
        - name: main
          image: redis:8
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
