frontend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
  labels:
    project: counter
spec:
  selector:
    app: counter-frontend
  ports:
    - port: 80
      targetPort: 3000
