redis_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    project: counter
spec:
  selector:
    app: redis
  ports:
    - port: 6379
