redis_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
  labels:
    project: counter
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    # Allow traffic only from backend
    - from:
      - podSelector:
          matchLabels:
            app: counter-backend
      ports:
        - protocol: TCP
          port: 6379
    # Allow traffic from backup job
    - from:
      - podSelector:
          matchLabels:
            app: redis-backup
      ports:
        - protocol: TCP
          port: 6379
